--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,8 @@ set -g status-utf8 on
 set -g status-interval 10
 set -g status-bg black
 set -g status-fg yellow
-set -g status-left "#[fg=yellow]%H:%M %Y-%m-%d [default]"
+set -g status-left-length 18
+set -g status-left "%Y-%m-%d (%H:%M)[default]"
 set -g status-right ""
 set -g status-justify right
 set -g window-status-bell-fg red
